Replace calls to `Paths.get(…)` by calls to `Path.of(…)`. According Javadoc, `Paths` may be deprecated in a future Java version.